# fox

./: example.fox  fox-syntax-notation  pyproject.toml
.github/workflows/: ci.yaml  superlint.yaml
src/fox/: entrypoint.py
src/fox/intrepreter/: fox.py
src/fox/intrepreter/error_reporter/: error_report.py
src/fox/intrepreter/errors/: fox_error.py  parse_error.py
src/fox/intrepreter/lexical/: lexical_scanner.py  scanner_mixin.py
src/fox/intrepreter/lexical/token_scanner/: abstract_token_scanner.py  bang_token_scanner.py  blank_token_scanner.py  equal_token_scanner.py  greater_token_scanner.py  identifier_token_scanner.py  less_token_scanner.py  line_break_token_scanner.py  number_token_scanner.py  slash_token_scanner.py  static_token_scanner.py  string_token_scanner.py  unexpected_token_scanner.py
src/fox/intrepreter/runners/: file_runner.py  fox_runner.py  repl_runner.py
src/fox/intrepreter/syntax_expressions/: binary.py  expr.py  grouping.py  literal.py  unary.py
src/fox/intrepreter/tokens/: token.py  token_posinion.py  token_type.py
src/tools/: ast_printer.py  generate_ast.py
tests/: test_fox.py
