[tool.poetry]
name = "fox"
version = "0.1.0"
description = ""
authors = ["Fernando <fwfurtado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.0.0"
flake8-eradicate = "^1.0.0"
flake8-comprehensions = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
mypy_path="src/"
namespace_packages=true
warn_unused_ignores=true
pretty=true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88